# notes

./: .gitignore  Makefile  app.py  devoir.py  main_23.ipynb  main_24.ipynb  main_25.ipynb  pyproject.toml  requirements.txt  test.ipynb
.devcontainer/: devcontainer.json
22/: notes.pkl
23/: notes.pkl
24/: notes.pkl
25/: notes.pkl  notes25.xlsx
